Covert to Spring boot 3 and Java 17 🚀
- Spring Boot version:  3.1.0 ⭐
- Spring Cloud version: 2022.0.3 ⭐
- Add missing mvnw ⭐
- Use record instead of classic POJO/DTO ⭐
- Format application.yml (s) ⭐
- Mitigate SNAKEYAML vulnerabilities 💀

--- a/scs-101/scs-101-inventory-check/src/main/resources/application.yml
+++ b/scs-101/scs-101-inventory-check/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 spring.application.name: scs-101-inventory-check
 spring.cloud.stream.bindings:
-  inventoryCheck-in-0.destination: scs-101.inventoryCheck
-  inventoryCheck-out-0.destination: scs-101.orderStatus
+  inventoryCheck-in-0:
+    destination: scs-101.inventoryCheck
+  inventoryCheck-out-0:
+    destination: scs-101.orderStatus
 server.port: 8082
-logging.level.com.ehsaniara.scs_kafka_intro: debug
+logging.level:
+  com.ehsaniara.scs_kafka_intro: debug
 ---
 spring:
   config.activate.on-profile: kube
