--- a/scs-101/scs-101-shipped/src/main/resources/application.yml
+++ b/scs-101/scs-101-shipped/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 spring.application.name: scs-101-shipped
-spring.cloud.stream.bindings.shippedConsumer-in-0.destination: scs-101.shipped
+spring.cloud.stream.bindings:
+  shippedConsumer-in-0:
+    destination: scs-101.shipped
 server.port: 8084
-logging.level.com.ehsaniara.scs_kafka_intro: debug
+logging.level:
+  com.ehsaniara.scs_kafka_intro: debug
 ---
 spring:
   config.activate.on-profile: kube
