--- a/scs-101/scs-101-shipping/src/main/resources/application.yml
+++ b/scs-101/scs-101-shipping/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 spring.application.name: scs-101-shipping
 spring.cloud.stream.bindings:
-  shippingProcess-in-0.destination: scs-101.shipping
-  shippingProcess-out-0.destination: scs-101.orderStatus
+  shippingProcess-in-0:
+    destination: scs-101.shipping
+  shippingProcess-out-0:
+    destination: scs-101.orderStatus
 server.port: 8083
-logging.level.com.ehsaniara.scs_kafka_intro: debug
+logging.level:
+  com.ehsaniara.scs_kafka_intro: debug
 ---
 spring:
   config.activate.on-profile: kube
